<resources>
    <string name="app_name">TalkIt</string>
    <string name="continue_label">Continue</string>
    <string name="empty"> </string>
    <string name="nickname">Enter Nickname </string>
    <string name="post_header">Start Typing....</string>
    <string name="post_title">Title</string>
    <string name="trigger">Trigger Warning</string>
    <string name="enablechat">Enable Chat</string>
    <string name="tags">Tags</string>
    <string name="select_tags">Select Tags</string>
    <string name="share">Share</string>
    <string name="add_title">Add Title</string>
    <string name="add">Add</string>
    <string name="explore"><u>Explore</u></string>
    <string name="extended_fab_label">Suggest</string>

</resources>
