<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    tools:context=".PostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/postContent2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:autofillHints=""
                android:gravity="top|left"
                android:hint="Share your thoughts..."
                android:inputType="textMultiLine"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_below="@id/postContent2"
                android:layout_marginTop="5dp"
                android:text="Title"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleLayout"
                android:layout_below="@id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empty"
                android:inputType="text"
                android:orientation="vertical"
                android:textColor="@color/Black"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:inputType="text"
                    android:background="@drawable/sign"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tag_text"
                android:layout_below="@id/titleLayout"
                android:layout_marginTop="5dp"
                android:text="Tags"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tagLayout"
                android:layout_below="@id/tag_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empty"
                android:inputType="text"
                android:orientation="vertical"
                android:textColor="@color/Black"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagstext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:inputType="text"
                    android:textAllCaps="true"
                    android:background="@drawable/sign"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/tagsubmit"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_below="@id/tagLayout"
                android:textColor="@color/White"
                android:background="@drawable/button"
                android:layout_marginTop="3dp"
                android:onClick="onAddTag"
                android:text="@string/add" />

            <LinearLayout
                android:id="@+id/tagscontainer"
                android:layout_below="@id/tagLayout"
                android:layout_width="50dp"
                android:layout_marginLeft="3dp"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="horizontal"/>

            <TextView
                android:id="@+id/triggerwarning"
                android:layout_below="@id/tagsubmit"
                android:layout_marginTop="25dp"
                android:text="@string/trigger"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/triggerCheck"
                android:layout_below="@id/tagsubmit"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/triggerwarning2"
                android:layout_below="@id/triggerwarning"
                android:layout_marginTop="25dp"
                android:text="@string/enablechat"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/chatCheck"
                android:layout_below="@id/triggerCheck"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/triggerwarning2"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:onClick="onShareButton"
                android:textColor="@color/White"
                android:background="@drawable/button"
                android:text="@string/share"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>